log_2022-04-18_21-55-17.txt
Traceback (most recent call last):
  File "/main/scripts/pop_fields.py", line 1, in <module>
    from neurophotonics.fields import *
  File "/main/neurophotonics/__init__.py", line 11, in <module>
    from . import space, fields, design, sim, demix
  File "/main/neurophotonics/fields.py", line 140
    ESim.insert([
                 ^
IndentationError: unindent does not match any outer indentation level
['podman', '--version', '']
using podman version: 3.4.2
podman logs docker_standard_worker_1
exit code: 0
